<resources>
    <string name="app_name">Meriniguan Accounting</string>
    <string name="clear_data">Clear Data</string>
    <string name="difference">Difference</string>
    <string name="reason_with_colon">Reason:</string>
    <string name="reason">Reason</string>
    <string name="enter_reason">Enter a reason</string>
    <string name="date_with_colon">Date:</string>
    <string name="date">Date</string>
    <string name="enter_date">Enter date</string>
    <string name="amount">Amount</string>
    <string name="theme">Theme</string>

    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="set_by_battery_saver">Set by Battery Saver</string>

    <string name="data_saved">Data saved</string>
    <string name="insertion_of_data_in_the_table_failed">Insertion of data in the table failed</string>
    <string name="editing_of_data_in_table_failed">Editing of data in table failed</string>
    <string name="item_is_deleted">Item is deleted</string>
    <string name="deleting_of_data_from_table_failed">Deleting of data from table failed</string>
    <string name="tap_delete_button_again_to_delete_item">Tap delete button again to delete item</string>

    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="do_you_really_want_to_clear_data">Do you really want to clear data?</string>

    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="edit_item">Edit Item</string>

    <string name="enter_a_date">Enter a date</string>
    <string name="enter_a_difference">Enter a difference</string>
    <string name="enter_a_reason">Enter a reason</string>
    <string name="enter_plus_or_minus">Enter + or -</string>

    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="app_description">It\'s very interesting and funny to keep finance accounting with this good-looking and comfortable application developed by Meriniguan Corporation.</string>

</resources>