<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dataTextTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_with_colon"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/dateEditText"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="02.02.2021 20:36"
            android:hint="@string/enter_date"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/plusOrMinusEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:hint="+"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/differenceEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:inputType="number"
            android:hint="@string/difference" />

    </LinearLayout>

    <TextView
        android:id="@+id/reasonTextTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/reason_with_colon"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/reasonEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_reason"
        android:layout_marginTop="5dp"
        android:textSize="20sp"/>

</LinearLayout>